Fixed the UI shift when the error message appears

--- a/ai-helper/src/index.css
+++ b/ai-helper/src/index.css
@@ -95,6 +95,7 @@ button:focus-visible {
 .input { 
   padding-left: 0px;
   padding-right: 0.25em;
+  height: 160px;
 }
 
 .input label {
